# zkp-maze

./: .env.example  .gitignore  CHITSHEET  Dockerfile  LICENSE  README.md  TODO.md  VASTAI  generate_maze.py  index.html  package.json  pnpm-lock.yaml  test.sh  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
.github/workflows/: docker-build-push.yml
circuit/: README.md
circuit-circom/circuits/: maze.circom  maze_config.circom
circuit-noir/: Prover.toml  README.md
circuit-noir-maze-gen/: Nargo.toml  Prover.toml  README.md
circuit-noir-maze-gen/src/: main.nr  maze.nr  rng.nr
circuit-noir/src/: maze_config.nr  test_solutions.nr
circuit-risczero/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
circuit-risczero/api-server/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  test-api.sh
circuit-risczero/api-server/src/: main.rs
circuit-risczero/core/: Cargo.toml  README.md
circuit-risczero/core/src/: lib.rs  maze_gen.rs  rng.rs
circuit-risczero/host/: Cargo.toml  README.md
circuit-risczero/host/src/: lib.rs  main.rs
circuit-risczero/host/tests/: integration_test.rs
circuit-risczero/methods/: Cargo.toml  README.md  build.rs
circuit-risczero/methods/maze-gen/: Cargo.toml
circuit-risczero/methods/maze-gen/src/: main.rs
circuit-risczero/methods/path-verify/: Cargo.toml
circuit-risczero/methods/path-verify/src/: main.rs
circuit/src/: main.nr  maze_config.nr  test_solutions.nr
docs/: circom-implementation-status.md  circom-integration-plan.md  server-side-proving-plan.md  ui-integration-complete.md
scripts/: compile-circom.js  generate-circom-maze.js  setup-circom.js
src/: App.tsx  maze_seed.json  vite-env.d.ts
src/components/: GameControls.tsx  LogsPanel.tsx  MazeCanvas.tsx  MazeGame.tsx  MobileControls.tsx  ProofPanel.tsx  ProofSystemInfo.tsx  StatsPanel.tsx
src/constants/: maze.ts  provider.ts  theme.ts
src/hooks/: useGameState.ts  useMazeCanvas.ts  useMazeProof.ts  useMazeProofCircomGroth16.ts  useMazeProofCircomPlonk.ts  useMazeProofServer.ts  useRisc0Proof.ts  useSwipeControls.ts
src/types/: proofSystem.ts  snarkjs.d.ts
src/utils/: mazeGenerator.ts  risc0Api.ts
worker/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  _Dockerfile  index.ts
worker/container_src/: Cargo.toml  package-lock.json  package.json  server.js
worker/container_src/src/: main.rs
