[workspace]
resolver = "2"
members = ["host", "methods", "api-server"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

# Optimized for RISC Zero zkVM proof generation performance
[profile.release]
opt-level = 3           # Maximum optimization for speed (not size)
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1       # Better optimization, slower compile
lto = "thin"            # Thin LTO for faster builds with most benefits